--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
 				<h1>The best coworking spaces for lazy devs.</h1>
 			</section>
 			
-			<section class="item">
+			<section class="item first">
 				<img src="images/hygge.jpg" class="item-img" alt="A smart coworking space">
+				<div class='banner'>Exclusive</div>
 				<div class="caption">
 					<p>Skiving in Scandinavia? Relax with a latte at Hygge Lounge.</p>
+					<button class='btn'>Book</button>
 				</div>
 			</section> 
 			
@@ -39,6 +41,7 @@
 				<img src="images/sky-garden.jpg" class="item-img" alt="A coworking space with plants">
 				<div class="caption">
 					<p>Bored in Barcelona? Take a siesta at the Sky Garden.</p>
+					<button class='btn'>Book</button>
 				</div>
 			</section> 
 			
@@ -46,9 +49,13 @@
 				<img src="images/generator.jpg" class="item-img" alt="A comfortable coworking space">
 				<div class="caption">
 					<p>Relaxing in Rio? Take some downtime at the Generator Hub.</p>
+					<button class='btn'>Book</button>
 				</div>
 			</section>
 			
 		</main>
+		<div class='modal'>
+			<img src='images/message.png' alt='speech bubble'/>
+		</div>
 	</body>
 </html>
